Fix bug in array pack with shared strings

If string literals are long and they become shared, we need to make them
independent before we can write to them. [Bug #19116]